--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,10 +35,16 @@ keepalived_build_dir: "{{ keepalived_src_dir }}/{{ keepalived_name }}-{{ keepali
 keepalived_dir: "{{ keepalived_build_dir }}/keepalived"
 # Path to Keepalived binary
 keepalived_path: "{{ keepalived_build_dir }}/sbin/{{ keepalived_name }}"
+# Name of the template file for Keepalived configuration file
+keepalived_conf_template: 'keepalived.conf.j2'
 # Folder for configuration files
 keepalived_conf_dir: '/etc/keepalived'
 # Path to Keepalived configuration file
 keepalived_conf_file_path: "{{ keepalived_conf_dir }}/{{ keepalived_name }}.conf"
+# Path to original Keepalived sysconfig file
+keepalived_original_sysconfig_file_path: "{{ keepalived_build_dir }}/etc/sysconfig/{{ keepalived_name }}"
+# Path to Keepalived sysconfig file
+keepalived_sysconfig_file_path: "{{ keepalived_conf_dir }}/{{ keepalived_name }}.sysconfig"
 # Name of the template file for Systemd service
 keepalived_service_template: 'keepalived.service.j2'
 # Folder into which Keepalived service file is copied
