--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,7 +18,7 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
 lint: |
   yamllint --strict --format colored .
-  ansible-lint -v --force-color
+  ansible-lint -v --force-color --exclude .pipenv/
 provisioner:
   name: ansible
   playbooks:
