Determine keepalived version even in check mode since this won't make changes to the system
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,6 +55,7 @@
   register: keepalived_version_installed
   when: keepalived_installed.stat.exists
   changed_when: false
+  check_mode: no
 
 - name: Put value of installed version into an Ansible fact.
   set_fact:
