--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@
 
 ---
 # Keepalived version
-keepalived_version: '2.1.5'
+keepalived_version: '2.2.0'
 # URL from which Keepalived can be downloaded
 keepalived_download_url: "https://www.keepalived.org/software/keepalived-{{ keepalived_version }}.tar.gz"
 # List of dependencies of Keepalived
@@ -27,14 +27,18 @@ keepalived_group: 'keepalived'
 
 # Folder to put the Keepalived installation into
 keepalived_base_dir: '/usr/local'
+# Folder to put the Keepalived binary into
+keepalived_binary_dir: "{{ keepalived_base_dir }}/sbin"
 # Source folder to put the Keepalived build directories into
 keepalived_src_dir: "{{ keepalived_base_dir }}/src"
 # Path to Keepalived build folder
 keepalived_build_dir: "{{ keepalived_src_dir }}/{{ keepalived_name }}-{{ keepalived_version }}"
 # Folder which contains Keepalived sources
 keepalived_dir: "{{ keepalived_build_dir }}/keepalived"
-# Path to Keepalived binary
-keepalived_path: "{{ keepalived_build_dir }}/sbin/{{ keepalived_name }}"
+# Path to build Keepalived binary
+keepalived_build_path: "{{ keepalived_build_dir }}/sbin/{{ keepalived_name }}"
+# Path to Keepalived executable
+keepalived_executable_path: "{{ keepalived_binary_dir }}/{{ keepalived_name }}"
 # Name of the template file for Keepalived configuration file
 keepalived_conf_template: 'keepalived.conf.j2'
 # Folder for configuration files
