Use a temporary directory as build directory
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,18 +36,19 @@
     shell: '/usr/sbin/nologin'
     state: present
 
-- name: Check whether Keepalived binary is installed.
-  stat:
-    path: "{{ keepalived_executable_path }}"
-  register: keepalived_installed
-
-- name: Create Keepalived build directory.
+- name: Create Keepalived Configuration Directory.
+  become: yes
   file:
-    path: "{{ keepalived_build_dir }}"
+    path: "{{ keepalived_conf_dir }}"
     state: directory
     owner: "{{ keepalived_user }}"
     group: "{{ keepalived_group }}"
     mode: '0755'
+
+- name: Check whether Keepalived binary is installed.
+  stat:
+    path: "{{ keepalived_executable_path }}"
+  register: keepalived_installed
 
 - name: Get Keepalived version.
   command:
@@ -75,6 +76,17 @@
 - name: Continue with installing Keepalived if Keepalived is not already installed or versions are not equal.
   when: not keepalived_installed.stat.exists or not is_keepalived_version_equal
   block:
+
+    - name: Create temporary Keepalived build directory.
+      ansible.builtin.tempfile:
+        state: directory
+        prefix: "{{ keepalived_name }}-{{ keepalived_version }}_"
+      register: tempdir
+
+    - name: Store temporary build directory path
+      set_fact:
+        keepalived_build_dir: "{{ tempdir.path }}"
+
     - name: Remove old build directory
       become: yes
       file:
@@ -112,14 +124,15 @@
         target: install
       notify: Restart Keepalived
 
-- name: Create Keepalived Configuration Directory.
-  become: yes
-  file:
-    path: "{{ keepalived_conf_dir }}"
-    state: directory
-    owner: "{{ keepalived_user }}"
-    group: "{{ keepalived_group }}"
-    mode: '0755'
+    - name: Copy Keepalived sysconfig file
+      become: yes
+      copy:
+        src: "{{ keepalived_build_dir }}/keepalived/etc/sysconfig/keepalived"
+        dest: "{{ keepalived_sysconfig_file_path }}"
+        owner: "{{ keepalived_user }}"
+        group: "{{ keepalived_group }}"
+        mode: '0644'
+        remote_src: yes
 
 - name: Create Configuration File.
   become: yes
@@ -129,17 +142,6 @@
     owner: "{{ keepalived_user }}"
     group: "{{ keepalived_group }}"
     mode: '0644'
-  notify: Reload Keepalived
-
-- name: Copy Keepalived sysconfig file
-  become: yes
-  copy:
-    src: "{{ keepalived_original_sysconfig_file_path }}"
-    dest: "{{ keepalived_sysconfig_file_path }}"
-    owner: "{{ keepalived_user }}"
-    group: "{{ keepalived_group }}"
-    mode: '0644'
-    remote_src: yes
   notify: Reload Keepalived
 
 - name: Create Keepalived Service Unit File.
