Always create a build directory even in check mode
Fixes #18

Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,6 +82,7 @@
         state: directory
         prefix: "{{ keepalived_name }}-{{ keepalived_version }}_"
       register: tempdir
+      check_mode: no
 
     - name: Store temporary build directory path
       set_fact:
