--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,46 +17,37 @@ keepalived_dependencies:
   - 'libnl-3-dev'
   - 'libnl-genl-3-dev'
   - 'libsnmp-dev'
-# Name of Keepalived
-keepalived_name: 'keepalived'
 
 # Name of Keepalived user
 keepalived_user: 'keepalived'
 # Name of Keepalived group
 keepalived_group: 'keepalived'
 
-# Folder to put the Keepalived installation into
-keepalived_base_dir: '/usr/local'
-# Folder to put the Keepalived binary into
-keepalived_binary_dir: "{{ keepalived_base_dir }}/sbin"
-# Source folder to put the Keepalived build directories into
-keepalived_src_dir: "{{ keepalived_base_dir }}/src"
-# Folder which contains Keepalived sources
-keepalived_dir: "{{ keepalived_build_dir }}/keepalived"
-# Path to build Keepalived binary
-keepalived_build_path: "{{ keepalived_build_dir }}/sbin/{{ keepalived_name }}"
+
 # Path to Keepalived executable
-keepalived_executable_path: "{{ keepalived_binary_dir }}/{{ keepalived_name }}"
+keepalived_executable_path: "/usr/local/sbin/keepalived"
+
 # Name of the template file for Keepalived configuration file
 keepalived_conf_template: 'keepalived.conf.j2'
+
 # Folder for configuration files
 keepalived_conf_dir: '/etc/keepalived'
+
 # Path to Keepalived configuration file
-keepalived_conf_file_path: "{{ keepalived_conf_dir }}/{{ keepalived_name }}.conf"
+keepalived_conf_file_path: "{{ keepalived_conf_dir }}/keepalived.conf"
+
 # Path to Keepalived sysconfig file
-keepalived_sysconfig_file_path: "{{ keepalived_conf_dir }}/{{ keepalived_name }}.sysconfig"
+keepalived_sysconfig_file_path: "{{ keepalived_conf_dir }}/keepalived.sysconfig"
+
 # Name of the template file for Systemd service
 keepalived_service_template: 'keepalived.service.j2'
-# Folder into which Keepalived service file is copied
-keepalived_systemd_dir: '/etc/systemd/system'
-# Name of Keepalived service file
-keepalived_service_file: 'keepalived.service'
-# Path to Keepalived service template file
-keepalived_service_template_file_path: "{{ keepalived_dir }}/{{ keepalived_service_file }}"
+
 # Path to Keepalived service file
-keepalived_service_file_path: "{{ keepalived_systemd_dir }}/{{ keepalived_service_file }}"
+keepalived_service_file_path: "/etc/systemd/system/keepalived.service"
+
 # Directory for Keepalived PID file
-keepalived_pid_file_dir: "/run/{{ keepalived_name }}"
+keepalived_pid_file_path: "/run/keepalived/keepalived.pid"
+
 
 # Configure notification email address
 keepalived_notification_email: 'name@localhost'
