--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -130,6 +130,13 @@
     mode: '0644'
   notify: Reload Keepalived
 
+- name: Verify Keepalived configuration.
+  become: yes
+  command:
+    cmd: "{{ keepalived_executable_path | quote }} --config-test {{ keepalived_conf_file_path | quote }}"
+  register: config_check
+  changed_when: config_check.rc != 0
+
 - name: Create Keepalived Service Unit File.
   template:
     src: "{{ keepalived_service_template }}"
