Add 'check' step right before 'converge' to molecule default scenario
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -26,5 +26,21 @@ provisioner:
     converge: converge.yml
 verifier:
   name: ansible
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    - dependency
+    - syntax
+    - create
+    - prepare
+    - check
+    - converge
+    - idempotence
+    - check
+    - side_effect
+    - verify
+    - destroy
 
 ...
