Run ansible-lint in offline mode
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,8 +17,9 @@ platforms:
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
 lint: |
+  set -e
   yamllint --strict --format colored .
-  ansible-lint -v --force-color --exclude .pipenv/
+  ansible-lint -v --force-color --offline --exclude .pipenv/
 provisioner:
   name: ansible
   playbooks:
