Add missing galaxy namespace to metadata to fix ansible-lint warning
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,6 +6,7 @@
 ---
 galaxy_info:
   role_name: keepalived
+  namespace: hifis
   author: HIFIS Software Team
   description: A role to set up Keepalived in a high availability and scalability context.
   company: Helmholtz Association
