--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -8,11 +8,11 @@
   hosts: all
   tasks:
     - name: Populate service facts.
-      service_facts:
+      ansible.builtin.service_facts:
       register: services_state
 
     - name: Check that Keepalived is running on instance.
-      assert:
+      ansible.builtin.assert:
         that:
           - services_state.ansible_facts.services['keepalived.service'].state is search("running")
         fail_msg: "Keepalived need to be running on instance."
