Update apt cache before installing dependencies
Signed-off-by: Norman Ziegner <norman.ziegner@ufz.de>

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -15,5 +15,6 @@
           - iproute2  # for gathering network facts
           - psmisc    # provides `killall` command
         state: present
+        update_cache: yes
 
 ...
