Skip tasks using make in initial dry-runs
* Skip tasks that use module community.general.make in initial dry-runs
because role may fail during initial dry-runs in some contexts if make
or package build-essential is not present initially.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -98,6 +98,7 @@
       become: yes
       community.general.make:
         chdir: "{{ keepalived_build_dir }}"
+      when: not initial_dry_run
 
     - name: Install Keepalived binaries.
       become: yes
@@ -105,6 +106,7 @@
         chdir: "{{ keepalived_build_dir }}"
         target: install
       notify: Restart Keepalived
+      when: not initial_dry_run
 
     - name: Copy Keepalived sysconfig file
       become: yes
