--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,7 +18,7 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
 lint: |
   set -e
-  yamllint --strict --format colored .
+  yamllint --strict --format colored . &&
   ansible-lint -v --force-color --offline --exclude .pipenv/
 provisioner:
   name: ansible
