--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
       matrix:
         image:
           - ghcr.io/hifis-net/ubuntu-systemd:20.04
+          - ghcr.io/hifis-net/ubuntu-systemd:22.04
 
     steps:
       - name: Check out the codebase.
