--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,20 +26,22 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Prepare the job environment.
         uses: ./.github/workflows/prepare-action
 
       - name: Lint code.
-        run: pipenv run molecule lint
+        run: |
+          pipenv run yamllint --strict --format colored .
+          pipenv run ansible-lint -v --force-color --offline --exclude=.pipenv/
 
   license_compliance:
     name: Check license compliance with reuse.
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Prepare the job environment.
         uses: ./.github/workflows/prepare-action
@@ -51,7 +53,7 @@ jobs:
     name: Run Molecule tests.
     runs-on: ubuntu-22.04
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         image:
           - ghcr.io/hifis-net/ubuntu-systemd:20.04
@@ -59,20 +61,29 @@ jobs:
 
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v3
-
-      - name: Enable lingering required for podman and systemd in GH Actions.
-        run: |  # Compare with https://github.com/eriksjolund/user-systemd-service-actions-workflow/blob/efe872924fd2dd35bb482544126ce751303e14c2/README.md
-          sudo loginctl enable-linger $UID
-          sleep 1
+        uses: actions/checkout@v4
 
       - name: Prepare the job environment.
         uses: ./.github/workflows/prepare-action
 
+      - name: Install modern podman
+        run: |
+          sudo mkdir -p /etc/apt/keyrings
+          curl -fsSL https://download.opensuse.org/repositories/devel:kubic:libcontainers:unstable/xUbuntu_$(lsb_release -rs)/Release.key \
+            | gpg --dearmor \
+            | sudo tee /etc/apt/keyrings/devel_kubic_libcontainers_unstable.gpg > /dev/null
+          echo \
+            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/devel_kubic_libcontainers_unstable.gpg]\
+              https://download.opensuse.org/repositories/devel:kubic:libcontainers:unstable/xUbuntu_$(lsb_release -rs)/ /" \
+            | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:unstable.list > /dev/null
+          sudo apt-get update -qq
+          sudo apt-get -qq -y install podman
+        shell: bash
+
       - name: Run Molecule tests.
-        run: XDG_RUNTIME_DIR=/run/user/$UID pipenv run molecule test
+        run: pipenv run molecule test
         env:
-          MOLECULE_DISTRO: ${{ matrix.image }}
+          MOLECULE_IMAGE: ${{ matrix.image }}
 
   release:
     name: Release new version on Ansible Galaxy
@@ -81,7 +92,7 @@ jobs:
     needs: [lint, license_compliance, test]
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: galaxy
         uses: robertdebock/galaxy-action@1.2.1
         with:
