--- a/Pipfile
+++ b/Pipfile
@@ -9,14 +9,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-yamllint = "~=1.28.0"
-ansible-lint = "~=6.8.6"
-molecule = {extras = ["podman"], version = "~=4.0.3"}
-molecule-podman = "~=2.0.3"
-reuse = "~=1.0.0"
+yamllint = "~=1.33.0"
+ansible-lint = "~=6.22.0"
+molecule = "~=6.0.2"
+molecule-plugins = {extras = ["podman"], version = "~=23.5.0"}
+reuse = "~=2.1.0"
 
 [packages]
-ansible = "~=6.5.0"
+ansible = "~=8.5.0"
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
